# http-test

./: composition.wac
middleware/: Cargo.toml
middleware/src/: lib.rs
middleware/wit/: middleware.wit
proxy/: Cargo.toml
proxy/src/: lib.rs
proxy/wit/: world.wit
