[package]
name = "middleware"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo-component-bindings = "0.5.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:middleware"

[package.metadata.component.target]

[package.metadata.component.target.dependencies]
"wasi:http" = { path = "../wit/deps/http" }
"wasi:clocks" = { path = "../wit/deps/clocks" }
"wasi:io" = { path = "../wit/deps/io" }
"wasi:random" = { path = "../wit/deps/random" }
"wasi:cli" = { path = "../wit/deps/cli" }
"wasi:filesystem" = { path = "../wit/deps/filesystem" }
"wasi:sockets" = { path = "../wit/deps/sockets" }

[package.metadata.component.dependencies]
